src/main/resources/META-INF/frontend/fcEnhancedTabs/fc-enhanced-tabs.css
/*-
 * #%L
 * Enhanced Tabs Add-on
 * %%
 * Copyright (C) 2023 Flowing Code
 * %%
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * #L%
 */
vaadin-menu-bar[theme~='fc-enhanced-tabs'] {
  width : 100%;
  min-width: var(--lumo-size-m);	
  box-shadow: inset 0 -1px 0 0 var(--lumo-contrast-10pct);
}
    
vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] {
  background: transparent;
  box-shadow: none;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs']::before {
  display: none;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs']::after {
  display: none;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'], 
vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] vaadin-menu-bar-item,
vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-menu-bar-item {
  margin: 0;
  padding: 0;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'][slot="overflow"] {
  padding: 0 var(--vaadin-gap-s, 0);
}

vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-menu-bar-item::part(checkmark) {
  display: none
}

vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-tab {
  text-align: start;
  transform-origin: 0% 50%;
  padding: 0.25rem 1rem;
  min-height: var(--lumo-size-m);
  min-width: 0;
}

vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-tab::before, 
vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-tab::after {
  left: 0;
  bottom: 50%;
  transform: translateY(50%) scale(0);
  width: 2px;
  height: var(--lumo-size-xs);
  border-radius: 0 var(--lumo-border-radius) var(--lumo-border-radius) 0;
  transform-origin: 100% 50%;
}

vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-tab[selected]::before, 
vaadin-menu-bar-list-box[theme="fc-enhanced-tabs"] vaadin-tab[selected]::after {
  transform: translateY(50%) scale(1);
}
vaadin-menu-bar-list-box vaadin-tab { 
  flex-grow: 1
}

vaadin-menu-bar-list-box vaadin-tab a[href] {
  justify-content: normal;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] {
    margin: 0;
    box-shadow: none;
    --vaadin-border-color-secondary: transparent;
    &:nth-last-child(2):has(+ vaadin-menu-bar-button[slot="overflow"][hidden]) { border-left: none; }
    &[role="menuitem"] ~ vaadin-menu-bar-button { border-left: none; }
    &:not(:last-child, :has(+ vaadin-menu-bar-button[slot="overflow"][hidden])) { border-right: none; }
}



vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] vaadin-menu-bar-item {
  background: var(--aura-surface-color, unset);
  --aura-surface-level: -1;
  --aura-surface-opacity: 0.3;
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] {
  --focus-ring-width: var(--vaadin-focus-ring-width, 2px);
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'] vaadin-tab {
  --_lumo-flag: var(--vaadin-lumo-theme, 0);

  padding-block: calc(
    (var(--_lumo-flag) * 0.5rem) +
    ((1 - var(--_lumo-flag)) * (var(--vaadin-padding-block-container, calc(0.5rem + var(--focus-ring-width))) - var(--focus-ring-width)))
  );

  padding-inline: calc(
    (var(--_lumo-flag) * 0.5rem) +
    ((1 - var(--_lumo-flag)) * (var(--vaadin-padding-inline-container, calc(0.5rem + var(--focus-ring-width))) - var(--focus-ring-width)))
  );
  
  margin-block: calc(
    (1 - var(--_lumo-flag)) * max(0px, var(--focus-ring-width) + var(--vaadin-padding-block-container, -9999px) - var(--vaadin-padding-block-container, 0px))
  );
  
  margin-inline: calc(
    (1 - var(--_lumo-flag)) * max(0px, var(--focus-ring-width) + var(--vaadin-padding-inline-container, -9999px) - var(--vaadin-padding-inline-container, 0px))
  );
  
}

vaadin-menu-bar-button[theme~='fc-enhanced-tabs'][focus-ring],
vaadin-menu-bar-button[theme~='fc-enhanced-tabs']:focus-visible {
  outline: none;
  vaadin-menu-bar-item {
    box-shadow: inset 0 0 0 var(--focus-ring-width) var(--vaadin-focus-ring-color, var(--lumo-primary-color-50pct));
    border-radius: var(--lumo-border-radius-m, var(--vaadin-tab-border-radius, var(--vaadin-radius-m)));
  }
}

